<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".app.activities.MainActivity">

    <item
        android:id="@+id/action_vector_image"
        android:title="@string/action_vector_image"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_api_example"
        android:title="@string/action_api_demo"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_pending"
        android:title="@string/action_clear_pending"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_list_photos"
        android:title="@string/action_show_photos"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_photo_calendar"
        android:title="@string/action_photo_calendar"
        app:showAsAction="never" />
</menu>
