<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".app.fragments.InputDateDialogFragment">

    <data class="QueryDateBinding">

    </data>

    <ScrollView
        android:id="@+id/query_types_sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/query_types_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/query_types_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/last_three_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/lbl_last_three_days" />

                <RadioButton
                    android:id="@+id/month_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_single_month" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/year_et_til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/year_et"
                            style="@style/inputDateText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/lbl_year" />

                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/month_et_til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/month_et"
                            style="@style/inputDateText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/lbl_month" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <RadioButton
                    android:id="@+id/date_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_single_day" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/single_year_et_til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/single_year_et"
                            style="@style/inputDateText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/lbl_year" />

                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/single_month_et_til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/single_month_et"
                            style="@style/inputDateText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/lbl_month" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/single_day_et_til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/single_day_et"
                            style="@style/inputDateText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/lbl_day" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </RadioGroup>

            <Button
                android:id="@+id/query_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/btn_query" />
        </LinearLayout>

    </ScrollView>
</layout>